--- a/Hotel-Yadran/package.json
+++ b/Hotel-Yadran/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --id id"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "bootstrap": "^5.3.3",
+    "lucide": "^0.483.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "sweetalert2": "^11.17.2"
   },
