--- a/Hotel-Yadran/package.json
+++ b/Hotel-Yadran/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@react-oauth/google": "^0.12.1",
+    "@supabase/supabase-js": "^2.49.1",
     "bootstrap": "^5.3.3",
     "lucide": "^0.483.0",
     "lucide-react": "^0.483.0",
@@ -24,7 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
+    "@types/react": "^17.0.84",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
