--- a/Hotel-Yadran/package.json
+++ b/Hotel-Yadran/package.json
@@ -11,10 +11,14 @@
     "server": "json-server --watch db.json --id id"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^6.4.8",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.49.1",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.5.0",
     "lucide": "^0.483.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
