--- a/Hotel-Yadran/package.json
+++ b/Hotel-Yadran/package.json
@@ -18,6 +18,7 @@
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.49.1",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.5.0",
     "lucide": "^0.483.0",
     "lucide-react": "^0.483.0",
@@ -26,7 +27,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
-    "sweetalert2": "^11.17.2"
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.17.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
