--- a/Hotel-Yadran/package.json
+++ b/Hotel-Yadran/package.json
@@ -15,9 +15,14 @@
     "@emotion/styled": "^11.14.0",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^6.4.8",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/themes": "^3.2.1",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.49.1",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.5.0",
     "lucide": "^0.483.0",
@@ -28,11 +33,12 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-toastify": "^11.0.5",
-    "sweetalert2": "^11.17.2",
+    "sweetalert2": "^11.6.13",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node": "^22.13.14",
     "@types/react": "^17.0.84",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
